# edustack

./: .gitignore  .nojekyll  00_professor_quickstart.html  01_tool_setup.html  01_tool_setup.qmd  01_version_control.html  02_professor_quickstart.html  02_professor_quickstart.qmd  02_quarto_class_setup.html  02_version_control.html  02_version_control.qmd  03_quarto_class_setup.html  03_quarto_class_setup.qmd  03_tool_setup.html  03_tool_setup.qmd  03_working_with_quarto.html  03_working_with_quarto.qmd  04_blackboard_ultra.html  04_creating_excel.html  04_creating_excel.qmd  04_version_control.html  04_version_control.qmd  04_working_with_quarto.html  04_working_with_quarto.qmd  04_working_with_quarto.rmarkdown  05_blackboard_ultra.html  05_quarto_class_setup.html  05_quarto_class_setup.qmd  05_working_with_quarto.html  05_working_with_quarto.qmd  06_creating_excel.html  06_creating_excel.qmd  06_github_classroom.html  06_github_classroom.qmd  07_blackboard_ultra.html  07_quarto_class_setup.html  08_automating_with_AI.html  08_automating_with_AI.qmd  08_github_classroom.html  09_capstone_build_like_ad688.html  (+24 more)
_book/: 00_professor_quickstart.html  01_tool_setup.html  02_professor_quickstart.html  02_version_control.html  03_quarto_class_setup.html  03_tool_setup.html  03_working_with_quarto.html  04_blackboard_ultra.html  04_creating_excel.html  04_version_control.html  04_working_with_quarto.html  05_blackboard_ultra.html  05_quarto_class_setup.html  05_working_with_quarto.html  06_creating_excel.html  06_github_classroom.html  07_blackboard_ultra.html  index.html  (+14 more)
(+94 files in other folders)
