[project]
name = "edustack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fontawesome>=5.10.1.post1",
    "google-genai>=1.54.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "perplexityai>=0.22.0",
    "plotly>=6.5.0",
    "quarto>=0.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
